# intendation

./: .gitignore  README.md
cars/: README.md
cars/server/: .gitignore  TEST_CASES.sh  data.py  pyproject.toml
cars/server/src/: __init__.py  config.py  exceptions.py  logger.py  main.py  middleware.py
cars/server/src/api/: __init__.py  dependencies.py
cars/server/src/api/v1/: __init__.py  cars.py  router.py
cars/server/src/db/: __init__.py  session.py
cars/server/src/models/: car_model.py
cars/server/src/schemas/: __init__.py  car.py
cars/server/src/services/: __init__.py  cars.py
cars/server/tests/: test_cars.py
los-pollos-hermanos/: gus_terminal.py  inventory_manager.py
vanguard-tracker/src/: main.py
vanguard-tracker/src/core/: __init__.py  valuation.py
vanguard-tracker/src/utils/: __init__.py  formatter.py
zion_mainframe/src/: error_handling_main.py  main.py
zion_mainframe/src/matrix/: __init__.py  uplink.py
